Closed
Bug 1639988
Opened 9 months ago
Closed 9 months ago
Disable the blocking from bug 1525084.
Categories
(Core :: Graphics: WebRender, defect)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
mozilla78
Tracking | Status | |
---|---|---|
firefox78 | --- | fixed |
People
(Reporter: jrmuizel, Assigned: jrmuizel)
References
Details
Attachments
(1 file)
This blocking is preventing a lot of users from getting WebRender and it
doesn't seem like the problem is actually reproducible in a lot of
situations. By disabling the blocking I'd like to see if we can get more
reports so that we can properly tighten the list.
Assignee | ||
Comment 1•9 months ago
|
||
This blocking is preventing a lot of users from getting WebRender and it
doesn't seem like the problem is actually reproducible in a lot of
situations. By disabling the blocking I'd like to see if we can get more
reports so that we can properly tighten the list.
Pushed by jmuizelaar@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d5255379819c Disable the blocking from bug 1525084. r=aosmond
Comment 3•9 months ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 9 months ago
status-firefox78:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in
before you can comment on or make changes to this bug.
Description
•